--- a/mysql-connector-j-8.3.0/CHANGES
+++ b/mysql-connector-j-8.3.0/CHANGES
@@ -327,7 +327,7 @@ Version 8.0.24
 
   - Fix for Bug#102321 (32405590), CALLING RESULTSETMETADATA.GETCOLUMNCLASSNAME RETURNS WRONG VALUE FOR DATETIME.
 
-  - WL#14453, Pluggable authentication: new default behavior & user-less authentications.
+  - WL#14453, Pluggable authentication: new default behavior & appUser-less authentications.
 
   - WL#14392, Improve timeout error messages [classic].
 
@@ -1486,7 +1486,7 @@ Version 6.0.6
      * _client_name : "MySQL Connector Java"
      * _runtime_version : the version of the Java runtime environment in which the driver is running
      * _runtime_vendor : the name of company which produced the Java runtime environment
-    Additionally, users may supply their own key/value attributes to be exposed by providing them in
+    Additionally, appUsers may supply their own key/value attributes to be exposed by providing them in
     "key1:value1,key2:value2" format in the connectionAttributes connection property.
     To avoid sending any connection attributes to the server, set connectionAttributes property to "none".
 
@@ -1539,7 +1539,7 @@ Version 6.0.6
 
     Note that if container does not support annotations you should add description to web.xml:
        <listener>
-          <listener-class>user.package.YourThreadsListener</listener-class>
+          <listener-class>appUser.package.YourThreadsListener</listener-class>
        </listener>
 
   - Added tests for explicit partition selection syntax introduced in 5.6GA.
@@ -1884,7 +1884,7 @@ Version 6.0.6
      during connection post-handshake process.
 
    - Patch for problem where "noAccessToProcedureBodies=true" was causing
-     "underprivileged" user not to have access to procedures created by him.
+     "underprivileged" appUser not to have access to procedures created by him.
 
    - Patch for Bug#56305, unhandled NPE in DatabaseMetaData.java when calling
      wrong-cased function without access to mysql.proc. Although simple by
@@ -1923,13 +1923,13 @@ Version 6.0.6
 
        An example would be:
 
-       jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)(user=test)/db
+       jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)(appUser=test)/db
 
       Any other parameters are treated as host-specific properties that follow
       the conventions of the JDBC URL properties. This now allows per-host
       overrides of any configuration property for multi-host connections
       (failover, loadbalance, replication). We do recommend that the overrides
-      are limited to user, password, network timeouts and statement and
+      are limited to appUser, password, network timeouts and statement and
       metadata cache sizes. Unexpected behavior may be observed with other
       per-host overrides.
 
@@ -2725,9 +2725,9 @@ Version 6.0.6
       Implement this interface to be placed "in between" query execution, so that
       you can influence it. (currently experimental).
 
-      StatementInterceptors are "chainable" when configured by the user, the
+      StatementInterceptors are "chainable" when configured by the appUser, the
       results returned by the "current" interceptor will be passed on to the next
-      on in the chain, from left-to-right order, as specified by the user in the
+      on in the chain, from left-to-right order, as specified by the appUser in the
       JDBC configuration property "statementInterceptors".
 
       See the sources (fully javadoc'd) for com.mysql.jdbc.StatementInterceptor
@@ -3192,7 +3192,7 @@ nn-nn-07 - Version 5.0.9
     - Fixed BUG#23304 - DBMD using "show" and DBMD using information_schema do
       not return results consistent with each other. (note this fix only
       addresses the inconsistencies, not the issue that the driver is
-      treating schemas differently than some users expect. We will revisit
+      treating schemas differently than some appUsers expect. We will revisit
       this behavior when there is full support for schemas in MySQL).
 
     - Fixed BUG#25073 - rewriting batched statements leaks internal statement
@@ -3404,7 +3404,7 @@ nn-nn-07 - Version 5.0.9
 
     - Added configuration option "noAccessToProcedureBodies" which will
       cause the driver to create basic parameter metadata for
-      CallableStatements when the user does not have access to procedure
+      CallableStatements when the appUser does not have access to procedure
       bodies via "SHOW CREATE PROCEDURE" or selecting from mysql.proc
       instead of throwing an exception. The default value for this option
       is "false".
@@ -3742,7 +3742,7 @@ nn-nn-07 - Version 3.1.15
 	- Map "latin1" on MySQL server to CP1252 for MySQL > 4.1.0.
 
 	- Added additional accessor and mutator methods on ConnectionProperties
-	  so that DataSource users can use same naming as regular URL properties.
+	  so that DataSource appUsers can use same naming as regular URL properties.
 
 	- Fixed BUG#18740 - Data truncation and getWarnings() only returns last
 	  warning in set.
@@ -3962,7 +3962,7 @@ nn-nn-07 - Version 3.1.15
 	      set "nullCatalogMeansCurrent=true" in your JDBC URL properties.
 
 	    - Specifying "" means "current" catalog, even though this isn't quite
-	      JDBC spec compliant, it's there for legacy users.
+	      JDBC spec compliant, it's there for legacy appUsers.
 
 	    - Specifying a catalog works as stated in the API docs.
 
@@ -4195,7 +4195,7 @@ nn-nn-07 - Version 3.1.15
       passing them as a comma-delimited list for the connection property
       'sessionVariables'.
 
-	- Fixed regression in ping() for users using autoReconnect=true.
+	- Fixed regression in ping() for appUsers using autoReconnect=true.
 
 	- Fixed BUG#9040 - PreparedStatement.addBatch() doesn't work with server-side
 	  prepared statements and streaming BINARY data.
@@ -4265,7 +4265,7 @@ nn-nn-07 - Version 3.1.15
 	  number of tables referenced in a SELECT.
 
 	- The logging system is now automatically configured. If the value has
-	  been set by the user, via the URL property "logger" or the system
+	  been set by the appUser, via the URL property "logger" or the system
 	  property "com.mysql.jdbc.logger", then use that, otherwise, autodetect
 	  it using the following steps:
 
@@ -4553,7 +4553,7 @@ nn-nn-07 - Version 3.1.15
       the wire, even though it's currently a placeholder instead of using
       MysqlIO.clearInputStream() which didn't work at various times because
       data wasn't available to read from the server yet. This fixes sporadic
-      errors users were having with ServerPreparedStatements throwing
+      errors appUsers were having with ServerPreparedStatements throwing
       ArrayIndexOutOfBoundExceptions.
 
     - Use com.mysql.jdbc.Message's classloader when loading resource bundle,
@@ -4563,7 +4563,7 @@ nn-nn-07 - Version 3.1.15
 07-07-04 - Version 3.1.3-beta
 
 	- Mangle output parameter names for CallableStatements so they
-	  will not clash with user variable names.
+	  will not clash with appUser variable names.
 
 	- Added support for INOUT parameters in CallableStatements.
 
@@ -5014,10 +5014,10 @@ nn-nn-07 - Version 3.1.15
 	- Add unsigned attribute to DatabaseMetaData.getColumns() output
 	  in the TYPE_NAME column.
 
-	- Added 'failOverReadOnly' property, to allow end-user to configure
+	- Added 'failOverReadOnly' property, to allow end-appUser to configure
 	  state of connection (read-only/writable) when failed over.
 
-	- Backported 'change user' and 'reset server state' functionality
+	- Backported 'change appUser' and 'reset server state' functionality
       from 3.1 branch, to allow clients of MysqlConnectionPoolDataSource
       to reset server state on getConnection() on a pooled connection.
 
@@ -5056,7 +5056,7 @@ nn-nn-07 - Version 3.1.15
       issuing 'SET NAMES' on MySQL >= 4.1.0.
 
     - Add helper methods to ResultSetMetaData (getColumnCharacterEncoding()
-      and getColumnCharacterSet()) to allow end-users to see what charset
+      and getColumnCharacterSet()) to allow end-appUsers to see what charset
       the driver thinks it should be using for the column.
 
     - Only set character_set_results for MySQL >= 4.1.0.
@@ -5525,7 +5525,7 @@ nn-nn-07 - Version 3.1.15
       qualify tables and columns in UpdatableResultSet (requires
       MySQL-4.1 or newer)
 
-    - Allow user to alter behavior of Statement/
+    - Allow appUser to alter behavior of Statement/
       PreparedStatement.executeBatch() via 'continueBatchOnError' property
       (defaults to 'true').
 
@@ -5600,9 +5600,9 @@ nn-nn-07 - Version 3.1.15
 
     - Added com.mysql.jdbc.MiniAdmin class, which allows you to send
       'shutdown' command to MySQL server...Intended to be used when 'embedding'
-      Java and MySQL server together in an end-user application.
+      Java and MySQL server together in an end-appUser application.
 
-    - Added 'connectTimeout' parameter that allows users of JDK-1.4 and newer
+    - Added 'connectTimeout' parameter that allows appUsers of JDK-1.4 and newer
       to specify a maxium time to wait to establish a connection.
 
     - Failover and autoReconnect only work when the connection is in a
@@ -6264,7 +6264,7 @@ Fixed PreparedStatement parameter checking
        add a day.
        (above fixes thanks to Vincent Partington)
 
-     - Added URL parameter parsing (?user=... etc).
+     - Added URL parameter parsing (?appUser=... etc).
 
 
 8-04-98 - Version 0.9d
